# monkeypp

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  requirements.txt
CMake/: FindSphinx.cmake  dependencies.cmake
docs/: CMakeLists.txt
docs/source/: conf.py.in  index.rst
tests/: CMakeLists.txt
